# SAF-Kotlin-log

./: CHANGELOG.md  build.gradle  project.properties  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
converter/: build.gradle
converter/converter/: build.gradle
converter/fastjson/: build.gradle
converter/fastjson/src/main/: AndroidManifest.xml
converter/gson/: build.gradle
converter/gson/src/main/: AndroidManifest.xml
converter/src/main/: AndroidManifest.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
debug_view/: build.gradle
extension/: build.gradle
extension/src/main/: AndroidManifest.xml
file/: build.gradle
file/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mmap/: CMakeLists.txt  build.gradle
mmap/src/main/: AndroidManifest.xml
mmap/src/main/cpp/: ScopeByteArray.h  (+5 more)
ndklog/: CMakeLists.txt  build.gradle
ndklog/src/main/: AndroidManifest.xml
ndklog/src/main/cpp/: CMakeLists.txt  logger.cpp  logger.h  utility.h
okhttp/: build.gradle
saf-log/: build.gradle  gradle.properties
saf-log/src/main/: AndroidManifest.xml
saf-logginginterceptor/: build.gradle
saf-logginginterceptor/src/main/: AndroidManifest.xml
saf-rxtrace/: build.gradle
saf-rxtrace/src/main/: AndroidManifest.xml
saf_debug_view/: build.gradle
saf_debug_view/src/main/: AndroidManifest.xml
saf_log_core/: build.gradle
saf_log_file/: build.gradle
saf_log_okhttp/: build.gradle
saf_log_okhttp/src/main/: AndroidManifest.xml
(+224 files in other folders)
